--- a/core/package.json
+++ b/core/package.json
@@ -59,8 +59,9 @@
     "@nuxtjs/supabase": "1.6.2",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "0.11.2",
+    "@stefanobartoletti/nuxt-social-share": "2.2.0",
     "@tailwindcss/vite": "4.1.16",
-    "@vueform/nuxt": "1.23.0",
+    "@vueform/nuxt": "1.24.0",
     "@vueuse/core": "14.0.0",
     "@vueuse/nuxt": "14.0.0",
     "better-sqlite3": "catalog:",
