--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,10 @@ catalog:
   vue: 3.5.26
   vue-router: 4.6.4
 
+minimumReleaseAge: 10080
+
+minimumReleaseAgeExclude: null
+
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
@@ -27,4 +31,4 @@ overrides:
 
 trustPolicy: no-downgrade
 
-verifyDepsBeforeRun: install
+verifyDepsBeforeRun: error
