--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,14 +2,26 @@ packages:
   - core
   - demos/*
   - docs
+  - modules/*
 
 catalog:
+  '@nuxt/devtools': ^3.1.1
+  '@nuxt/eslint': ^1.14.0
+  '@nuxt/eslint-config': ^1.14.0
+  '@nuxt/kit': 4.3.1
+  '@nuxt/module-builder': ^1.0.2
+  '@nuxt/schema': 4.3.1
+  '@nuxt/test-utils': ^4.0.0
+  '@types/node': ^25.2.2
   better-sqlite3: 12.2.0
+  changelogen: ^0.6.2
+  eslint: ^9.39.2
   nuxt: 4.3.1
-  '@nuxt/eslint': 1.14.0
-  typescript: 5.9.3
+  typescript: ^5.9.3
+  vitest: ^4.0.18
   vue: 3.5.27
-  vue-router: 5.0.2
+  vue-router: ^5.0.2
+  vue-tsc: ^3.2.4
 
 minimumReleaseAge: 10080
 
