--- a/core/package.json
+++ b/core/package.json
@@ -47,32 +47,22 @@
   },
   "dependencies": {
     "@nuxt-ignis/content": "^0.0.1",
+    "@nuxt-ignis/core": "^0.0.1",
     "@nuxt-ignis/db": "^0.0.5",
     "@nuxt-ignis/forms": "^0.0.4",
     "@nuxt-ignis/ui": "^0.0.1",
     "@nuxt-ignis/validation": "^0.0.3",
     "@maas/vue-equipment": "1.0.0-beta.37",
     "@nuxt/eslint": "catalog:",
-    "@nuxt/fonts": "0.11.4",
-    "@nuxt/image": "2.0.0",
-    "@nuxt/scripts": "0.13.0",
     "@nuxtjs/seo": "3.2.2",
-    "@pinia/nuxt": "0.11.2",
     "@stefanobartoletti/nuxt-social-share": "2.2.0",
-    "@tailwindcss/vite": "4.1.18",
-    "@vueuse/core": "14.0.0",
-    "@vueuse/nuxt": "14.0.0",
     "consola": "3.4.2",
     "date-fns": "4.1.0",
     "defu": "catalog:",
     "elrh-cosca": "0.3.5",
     "magic-regexp": "0.10.0",
     "nuxt": "catalog:",
-    "nuxt-auth-utils": "0.5.25",
-    "nuxt-security": "2.4.0",
     "nuxt-spec": "0.1.14",
-    "pinia": "3.0.3",
-    "postcss-jit-props": "1.0.16",
     "typescript": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
