--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -52,6 +52,10 @@ onlyBuiltDependencies:
 
 overrides:
   vite: npm:vite@8.0.0-beta.13
+  chokidar: ^5.0.0
+  koa: ^3.1.0
+  semver: ^7.7.0
+  undici-types: ^7.22.0
 
 trustPolicy: no-downgrade
 
