--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,7 +21,7 @@ catalog:
   elrh-cosca: ^0.3.5
   eslint: ^9.39.2
   nuxt: 4.3.1
-  nuxt-spec: 0.1.18
+  nuxt-spec: 0.2.0-alpha.2
   typescript: ^5.9.3
   vitest: ^4.0.18
   vue: 3.5.27
@@ -38,6 +38,7 @@ minimumReleaseAgeExclude:
   - '@nuxt-ignis/ui'
   - '@nuxt-ignis/utils'
   - '@nuxt-ignis/validation'
+  - nuxt-spec
 
 onlyBuiltDependencies:
   - '@parcel/watcher'
